--- a/demo/prj.conf
+++ b/demo/prj.conf
@@ -1,1 +1,28 @@
+#
+# Copyright (c) 2018 Nordic Semiconductor
+#
+# SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
+#
 
+# Logger module
+CONFIG_LOG=y
+
+# Button and LED library
+#CONFIG_DK_LIBRARY=y
+
+# Bluetooth LE
+# STEP 1 - Include the Bluetooth LE stack in your project
+CONFIG_BT=y
+# STEP 2 - Set the Bluetooth LE device name
+CONFIG_BT_DEVICE_NAME="NordicAdv"
+
+
+ #  Tx power = -20dBm
+CONFIG_BT_CTLR_TX_PWR_PLUS_4=y 
+
+# Enable workqueue functionality
+#CONFIG_WORKQUEUE=y
+
+# Increase stack size for the main thread and System Workqueue
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
+CONFIG_MAIN_STACK_SIZE=2048
