--- a/demo/prj.conf
+++ b/demo/prj.conf
@@ -6,9 +6,8 @@
 
 # Logger module
 CONFIG_LOG=y
+CONFIG_LOG_BACKEND_RTT=y
 
-# Button and LED library
-#CONFIG_DK_LIBRARY=y
 
 # Bluetooth LE
 # STEP 1 - Include the Bluetooth LE stack in your project
@@ -16,7 +15,9 @@ CONFIG_BT=y
 # STEP 2 - Set the Bluetooth LE device name
 CONFIG_BT_DEVICE_NAME="NordicAdv"
 
-
+## debug
+#CONFIG_DEBUG_OPYIMIZATION=y
+#CONFIG_DEBUG_THREAD_INFO=y
  #  Tx power = -20dBm
 CONFIG_BT_CTLR_TX_PWR_PLUS_4=y 
 
