--- a/demo/prj.conf
+++ b/demo/prj.conf
@@ -15,11 +15,19 @@ CONFIG_BT=y
 # STEP 2 - Set the Bluetooth LE device name
 CONFIG_BT_DEVICE_NAME="NordicAdv"
 
-## debug
-#CONFIG_DEBUG_OPYIMIZATION=y
-#CONFIG_DEBUG_THREAD_INFO=y
- #  Tx power = -20dBm
-CONFIG_BT_CTLR_TX_PWR_PLUS_4=y 
+# enable BLE GAP roles
+CONFIG_BT_PERIPHERAL=y
+CONFIG_BT_CENTRAL=y
+
+
+# Enable the BLE Scan module
+CONFIG_BT_SCAN=y
+CONFIG_BT_SCAN_FILTER_ENABLE=y
+CONFIG_BT_SCAN_NAME_CNT=1
+
+
+ #  Tx power
+#CONFIG_BT_CTLR_TX_PWR_PLUS_4=y 
 
 # Enable workqueue functionality
 #CONFIG_WORKQUEUE=y
