--- a/demo/prj.conf
+++ b/demo/prj.conf
@@ -7,7 +7,8 @@
 # Logger module
 CONFIG_LOG=y
 CONFIG_LOG_BACKEND_RTT=y
-
+# Button and LED library
+CONFIG_DK_LIBRARY=y
 
 # Bluetooth LE
 # STEP 1 - Include the Bluetooth LE stack in your project
@@ -23,7 +24,7 @@ CONFIG_BT_CENTRAL=y
 # Enable the BLE Scan module
 CONFIG_BT_SCAN=y
 CONFIG_BT_SCAN_FILTER_ENABLE=y
-CONFIG_BT_SCAN_NAME_CNT=1
+CONFIG_BT_SCAN_MANUFACTURER_DATA_CNT=1
 
 
  #  Tx power
