--- a/demo/prj.conf
+++ b/demo/prj.conf
@@ -7,13 +7,14 @@
 # Logger module
 CONFIG_LOG=y
 CONFIG_LOG_BACKEND_RTT=y
+
 # Button and LED library
 CONFIG_DK_LIBRARY=y
 
 # Bluetooth LE
-# STEP 1 - Include the Bluetooth LE stack in your project
+# Include the Bluetooth LE stack in your project
 CONFIG_BT=y
-# STEP 2 - Set the Bluetooth LE device name
+# Set the Bluetooth LE device name
 CONFIG_BT_DEVICE_NAME="NordicAdv"
 
 # enable BLE GAP roles
@@ -21,17 +22,11 @@ CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_CENTRAL=y
 
 
-# Enable the BLE Scan module
+# Enable the BLE Scan module: one maunfacturer data filter
 CONFIG_BT_SCAN=y
 CONFIG_BT_SCAN_FILTER_ENABLE=y
 CONFIG_BT_SCAN_MANUFACTURER_DATA_CNT=1
 
-
- #  Tx power
-#CONFIG_BT_CTLR_TX_PWR_PLUS_4=y 
-
-# Enable workqueue functionality
-#CONFIG_WORKQUEUE=y
 
 # Increase stack size for the main thread and System Workqueue
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
