--- a/demo_connect/CMakeLists.txt
+++ b/demo_connect/CMakeLists.txt
@@ -3,4 +3,4 @@ find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 
 project(demo)
 
-target_sources(app PRIVATE src/main.c src/advertiser_scanner.c src/blend.c src/my_lbs.c)
+target_sources(app PRIVATE src/main.c src/advertiser_scanner.c src/blend.c src/my_lbs.c src/my_lbs_client.c)
