--- a/demo_connect/prj.conf
+++ b/demo_connect/prj.conf
@@ -20,8 +20,11 @@ CONFIG_BT_DEVICE_NAME="NordicAdv"
 # enable BLE GAP roles
 CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_CENTRAL=y
+CONFIG_BT_MAX_CONN=1
 
-
+CONFIG_BT_GATT_CLIENT=y
+CONFIG_BT_GATT_DM=y
+CONFIG_HEAP_MEM_POOL_SIZE=2048
 # Enable the BLE Scan module: one maunfacturer data filter
 CONFIG_BT_SCAN=y
 CONFIG_BT_SCAN_FILTER_ENABLE=y
