change device name

--- a/demo_connect/prj.conf
+++ b/demo_connect/prj.conf
@@ -15,7 +15,7 @@ CONFIG_DK_LIBRARY=y
 # Include the Bluetooth LE stack in your project
 CONFIG_BT=y
 # Set the Bluetooth LE device name
-CONFIG_BT_DEVICE_NAME="NordicAdv"
+CONFIG_BT_DEVICE_NAME="my_LBS"
 
 # enable BLE GAP roles
 CONFIG_BT_PERIPHERAL=y
