style: titlecase main heading

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
-site_name: A BLE neighbor discovery protocol on nRF52
-repo_url: https://github.com/ImperialCollegeLondon/ReCoDE-A-BLE-neighbor-discovery-protocol-on-nRF52.git
+site_name: A BLE Neighbour Discovery Protocol on nRF52
+repo_url: https://github.com/ImperialCollegeLondon/ReCoDE-BLE-Neighbour-Discovery-Protocol-nRF52.git
 
 ## Please change the above name and link to point to your exemplar
 ## Please do not change the theme or most other options below 
